[package]

name = "bloodhound"
version = "0.2.3"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "Fuzzy file finder."
homepage = "https://github.com/jmacdonald/bloodhound"
repository = "https://github.com/jmacdonald/bloodhound"
license-file = "LICENSE"
keywords = ["fuzzy", "file", "find"]

[dependencies]
fragment = "0.1.2"
walkdir = "0.1.5"
